feat: sistema blindado com unicidade de placa/chassi e polling operacional